--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ try { zo3qptw00txc7t = new WufooForm();zo3qptw00txc7t.initialize(options);zo3qpt
 var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 })(document, 'script');</script>
 
+<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=bordeaux&key=AIzaSyCJCQ9FhmTpEBSn4C48cOsNXnzfHCvnlpI" allowfullscreen></iframe>
 
 
 
