--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 </head>
 <body>
 
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+  <div class="banner-content">
+    <h1>Bordeaux</h1>
+    <p>Visit </p>
+    <a class="btn btn-primary btn-lg">Start now</a>
+  </div>
+</div>
+
+
 <div class="first-paragraph">
 	<h1>Bordeaux</h1>
 
