--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </head>
 <body>
 
@@ -19,12 +20,18 @@
     <h1>Bordeaux</h1>
     <p>Come and visit this amazing city </p>
     <a class="btn btn-primary btn-lg">Start now</a>
+  
+	<ul class="list-inline2">
+		<li><a href="https://www.lewagon.com/fr">LeWagon</a></li>
+		
+	</ul>
   </div>
 </div>
 
+<img src="noun_971288_cc.svg" class="logo">
 
-<div class="first-paragraph">
-	
+
+<div class="first-paragraph">	
 
 	<h2>Découvrir la ville en quelques jours... <i class="fa fa-bicycle" aria-hidden="true"></i> </h2>
 	
@@ -35,7 +42,6 @@
 	<a href="https://www.lebonbon.fr/bordeaux/"><img src="https://www.bravofly.fr/offres/vols/bravofly/img/bordeaux.jpg" class="shadow" id="tourisme"></a>
 
 	<p id="paragraphe2">Marquant l'emplacement du cœur historique de Bordeaux, les limites du Vieux Bordeaux s’inscrivent dans le plus grand secteur sauvegardé de France. Entre le cours de l’Intendance et la rue Peyronnet s’étend ce que l’on appelle le Vieux Bordeaux. En fait, il s’agit d’un ensemble qui regroupe plusieurs quartiers, anciennes paroisses Saint-Pierre, Sainte-Colombe, Saint-Michel et Sainte-Croix. Ses monuments, ses rues et sa population en font une entité à part. </p>
-
 
 
 </div>
